--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,11 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'helvetica', sans-serif;
     font-size: 1rem;
     line-height: 1.5;
     color: var(--light-dark);
-    font-family: sans-serif;
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background: rgb(0,150,136);
     background: -moz-linear-gradient(180deg, rgba(0,150,136,1) 12%, rgba(218,219,212,1) 12%);
@@ -33,14 +32,6 @@ body {
     background: linear-gradient(180deg, rgba(0,150,136,1) 12%, rgba(218,219,212,1) 12%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#009688",endColorstr="#dadbd4",GradientType=1);
     overflow: hidden;
-}
-
-.app {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .dark-mode {
@@ -72,6 +63,8 @@ body {
     max-width: 75rem;
     margin: 0 auto;
     display: flex;
+    justify-content: center;
+    align-items: center;
     -webkit-box-shadow: 0 9px 5.5px -5.5px #464545;
     -moz-box-shadow: 0 9px 5.5px -5.5px #464545;
     box-shadow: 0 9px 5.5px -5.5px #464545;
